# StateMachine

./: .gitignore  AbcTransition.py  FSM.py  README.md  State.py  Transition.py  main.py  main_2.py  main_events.py  pyproject.toml  setup.py
Abstract/: AbcState.py  FSM.py
Implementation/: State.py  Transition.py
state_machine_lib/Abstract/: AbcState.py  FSM.py
state_machine_lib/Implementation/: State.py  Transition.py
